fix word breaking / wrapping for elements that render user strings

--- a/app/NewStringPreview.scss
+++ b/app/NewStringPreview.scss
@@ -6,4 +6,7 @@
   font-size: 14px;
   flex: 3 0 0;
   margin-left: 20px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  word-break: break-word;
 }
