--- a/app/StringInput.scss
+++ b/app/StringInput.scss
@@ -14,7 +14,7 @@
   line-height: 20px;
   white-space: pre-wrap;
   word-wrap: break-word;
-  word-break: keep-all;
+  word-break: break-word;
   background: white;
 }
 
